--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Cardo|Pathway+Gothic+One');
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: linear-gradient(to right, #6190e8 0%, #a7bfe8 99%);
+  color: #FFFFFF;
+}
+
+h2 {
+  font-family: 'Pathway Gothic One', sans-serif;
+  font-weight: normal;
 }
