--- a/src/character/character.css
+++ b/src/character/character.css
@@ -1,7 +1,21 @@
-h2 {
+.name {
+	margin: 60px 0 50px;
 	font-size: 48px;
 }
 
 table {
+	margin: 0 auto;
+	padding-right: 40px;
 	font-family: 'Cardo', serif;
+	font-size: 24px;
+	line-height: 42px;
+}
+
+td {
+	padding-right: 10px;
+}
+
+.ability-name {
+	text-align: right;
+	padding-right: 40px;
 }
