--- a/src/core/app.css
+++ b/src/core/app.css
@@ -5,3 +5,35 @@ h1 {
 h2 {
   font-size: 36px;
 }
+
+section {
+  margin: 0 auto;
+  width: 500px;
+  text-align: center;
+}
+
+.container {
+  margin-top: 100px;
+}
+
+button {
+  background-color: #6190E8;
+  border: none;
+  color: #FFFFFF;
+  font-family: 'Cardo', serif;
+  font-size: 18px;
+  padding: 20px 30px 15px;
+  margin: 60px 0 20px;
+  transition: background-color 100ms ease-out 100ms;
+  cursor: pointer;
+  /*box-shadow: 10px 10px 10px 10px #000;*/
+}
+
+button:hover {
+  background-color: #5C89DE;
+}
+
+button:focus {
+  outline: none;
+  box-shadow: 5px 5px 0px 0 #4366A7
+}
