--- a/src/core/app.css
+++ b/src/core/app.css
@@ -6,14 +6,16 @@ h2 {
   font-size: 36px;
 }
 
-section {
-  margin: 0 auto;
-  width: 500px;
-  text-align: center;
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
-.container {
-  margin-top: 100px;
+section {
+  width: 380px;
+  text-align: center;
 }
 
 button {
